--- a/CSS/index-desktop.css
+++ b/CSS/index-desktop.css
@@ -678,3 +678,33 @@ header {
         /* background-position: ; */
     }
 }
+
+
+.sticky-button {
+    width: 100px;
+    height: 100px;
+    /* background-color: white; */
+    position: fixed;
+    bottom: 2vh;
+    right: 2vw;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sticky-whatsapp-icon {
+    width: 80px;
+    height: 80px;
+}
+
+.sticky-button {
+    cursor: pointer;
+}
+
+@media only screen and (max-width:760px) {
+    .sticky-whatsapp-icon {
+        width: 70px;
+        height: 70px;
+    }
+}
