more photos added

--- a/CSS/header&footer.css
+++ b/CSS/header&footer.css
@@ -229,6 +229,15 @@ a:visited,
 @media only screen and (max-width: 760px) {
     #hero-section {
         margin-top: 90px;
+
+    }
+}
+
+@media only screen and (max-width: 660px) {
+    #hero-section {
+        background-image: none !important;
+        background-color: white !important;
+        background-position: center !important;
     }
 }
 
@@ -243,6 +252,7 @@ a:visited,
         height: 100px;
         margin-bottom: 20px;
     }
+
 }
 
 #hero-section-heading {
@@ -672,7 +682,9 @@ textarea {
     margin-bottom: 25px;
 }
 
-#contact-info > #location,#call-us,#email-us{
+#contact-info>#location,
+#call-us,
+#email-us {
     cursor: pointer;
 }
 
@@ -887,6 +899,7 @@ textarea {
 
 .sticky-button {
     cursor: pointer;
+    user-select: none;
 }
 
 @media only screen and (max-width:760px) {
@@ -894,4 +907,8 @@ textarea {
         width: 70px;
         height: 70px;
     }
+}
+
+img {
+    user-select: none;
 }
