--- a/CSS/product&services.css
+++ b/CSS/product&services.css
@@ -174,11 +174,18 @@ html {
     }
 }
 
-
 .service-cards:hover {
     border: 1px solid white;
     box-shadow: 2px 2px 12px 1px rgba(0, 0, 0, .3);
     transition: all .350s ease-out;
+}
+
+@media (hover: none) {
+    .service-cards {
+        border: 1px solid white !important;
+        box-shadow: 2px 2px 12px 1px rgba(0, 0, 0, .3) !important;
+        transition: all .350s ease-out !important;
+    }
 }
 
 #our-products {
