showcase-page added, contact-us fields required

--- a/CSS/header&footer.css
+++ b/CSS/header&footer.css
@@ -59,10 +59,14 @@ header,
     }
 }
 
+#header-logo,
+#header-title {
+    cursor: pointer;
+}
+
 #header-title {
     justify-self: center;
     align-self: center;
-    cursor: pointer;
 }
 
 /* media query for header title */
