--- a/CSS/index-desktop.css
+++ b/CSS/index-desktop.css
@@ -125,6 +125,7 @@ header {
     font-weight: 700;
     font-size: 64px;
     line-height: 111.8%;
+    letter-spacing: 5px;
     text-transform: capitalize;
     /* color: var(--accent-color); */
     color: #fff;
