--- a/CSS/index-desktop.css
+++ b/CSS/index-desktop.css
@@ -572,7 +572,7 @@ header {
     font-size: 24px;
     font-weight: 500;
     letter-spacing: 0.040em;
-    color: var(--dark-grey);
+    color: var(--dark-grey) !important;
 }
 
 @media only screen and (max-width:760px) {
